--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-.navbar {
-    background-color: #333;
-    overflow: hidden;
-  }
-  .navbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    animation-name: dropdown-animation;
+    animation-duration: 0.3s;
+    animation-fill-mode: both;
+    }
+    
+@keyframes dropdown-animation {
+    from {
+    opacity: 0;
+    transform: translateY(-10px);
+    }
+    to {
+    opacity: 1;
+    transform: translateY(0);
+    }
+}
