--- a/style.css
+++ b/style.css
@@ -33,6 +33,6 @@ body {
 /* Style the champion grid */
 .champion-grid {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-row: repeat(4, 1fr);
 	grid-gap: 20px;
 }
