--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 /* Style the header */
 .header {
 	background-color: #333;
-	color: white;
+	color: rgb(255, 255, 255);
 	padding: 20px;
 	text-align: center;
 }
@@ -27,7 +27,8 @@ body {
 .container {
 	display: flex;
 	justify-content: center;
-	margin: 50px;
+	margin: 25px;
+	background-color: #333;
 }
 
 /* Style the champion grid */
@@ -35,4 +36,5 @@ body {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	grid-gap: 20px;
+	padding: 20px;
 }
