--- a/style.css
+++ b/style.css
@@ -25,15 +25,28 @@ body {
 
 /* Style the container */
 .container {
+	padding: 1rem;
 	display: flex;
 	justify-content: center;
-	margin: 25px;
 }
 
 /* Style the champion grid */
 .champion-grid {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 20px;
-	padding: 20px;
-}
+	grid-template-columns: repeat(7, 1fr);
+	grid-row-gap: 20px;
+	
+  }
+
+  .champion-tile {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+  }
+
+  .champion-tile img {
+	width: 80px;
+	height: 80px;
+  }
