live search function implemented

--- a/style.css
+++ b/style.css
@@ -50,3 +50,11 @@ body {
 	width: 80px;
 	height: 80px;
   }
+
+  .hidden {
+	display: none;
+	height: 0;
+	width: 0;
+	margin: 0;
+	padding: 0;
+  }
