--- a/style.css
+++ b/style.css
@@ -34,27 +34,24 @@ body {
 .champion-grid {
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
-	grid-row-gap: 20px;
-	
+	grid-auto-rows: 100px;
+	transition: all 0.3s ease-in-out;
   }
-
+  
   .champion-tile {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	grid-row: span 2;
+	grid-column: span 1;
+	transition: all 0.3s ease-in-out;
   }
-
-  .champion-tile img {
-	width: 80px;
-	height: 80px;
-  }
-
+  
   .hidden {
-	display: none;
-	height: 0;
-	width: 0;
-	margin: 0;
-	padding: 0;
+	opacity: 0;
+	transform: translateY(-20px) translateX(-200%);
+	transition: all 0.3s ease-in-out;
+	pointer-events: none;
   }
