--- a/style.css
+++ b/style.css
@@ -68,3 +68,24 @@ body {
 	transition: all 0.3s ease-in-out;
 	pointer-events: none;
   }
+
+  /* .champion-tile:hover::before {
+	content: var(--tooltip-content);
+	position: absolute;
+	background-color: #fff;
+	color: #000;
+	padding: 5px;
+	border-radius: 5px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+	z-index: 999;
+  } */
+
+ .champion-stats-container .champion-stats .hidden{
+	display: block;
+	opacity: 0;
+	transition: all 0.3s ease-in-out;
+  }
+.champion-stats-container .champion-stats .visible{
+	opacity: 1;
+	transition: all 0.3s ease-in-out;
+  }
