--- a/style.css
+++ b/style.css
@@ -68,3 +68,21 @@ body {
 	transition: all 0.3s ease-in-out;
 	pointer-events: none;
   }
+
+.champion-stats-container
+{
+	display: block;
+	position: absolute;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.champion-stats-container img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	height: 200px;
+	width: auto;
+  }
