Tweaked color text red and green

--- a/style.css
+++ b/style.css
@@ -168,11 +168,11 @@ body {
 }
 
 .green-text {
-	color: green;
+	color: #00FF7F;
 }
 
 .red-text {
-	color: red;
+	color: #FF6347;
 }
 
 .champion-stats-grid {
