--- a/style.css
+++ b/style.css
@@ -21,17 +21,17 @@ body {
 	position: fixed;
 	z-index: 999;
 	display: flex;
-    justify-content: space-between; 
+	justify-content: space-between;
 }
 
 .navbar-collapse {
-    display: flex;
-    justify-content: center;
-    width: 100%;
+	display: flex;
+	justify-content: center;
+	width: 100%;
 }
 
 .navbar-nav {
-    display: flex;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
@@ -208,11 +208,52 @@ body {
 	grid-row: 2;
 }
 
+/* Team */
+/* .team {
+	margin: 75px 0;
+}
 
+.team h1 {
+	text-align: center;
+	font-weight: bold;
+	font-family: 'beaufort_for_lolbold';
+	padding-bottom: 10px;
+}
+.team h1::after {
+	content: '';
+	background: #333;
+	display: block;
+	height: 3px;
+	width: 150px;
+	margin: 10px auto;
+} */
 
+.about {
+	padding-top: 5rem;
+	color: white;
+}
 
+/* .padding {
+	padding-bottom: 2rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+} */
 
+.card {
+	min-width: 20rem;
+	min-height: 25rem;
+	max-width: 30rem;
+	max-height: 35rem;
+}
 
+.card-imd-top {
+	max-width: 100px;
+}
+
+.card-title {
+	text-align: center;
+	font-family: 'Times New Roman', Times, serif;
+}
 
 /* Intro */
 .intro {
@@ -286,8 +327,7 @@ body {
 	object-fit: cover;
 }
 
-.parallax h1
-{
+.parallax h1 {
 	display: block;
 	position: absolute;
 	top: 50%;
@@ -302,10 +342,10 @@ body {
 }
 
 #ashe {
-    height: 100%;
-    object-position: top center;
-    mask-image: linear-gradient(to top, transparent 1%, rgba(0,0,0,1));
-    -webkit-mask-image: linear-gradient(to top, transparent 1%, rgba(0,0,0,1));
+	height: 100%;
+	object-position: top center;
+	mask-image: linear-gradient(to top, transparent 1%, rgba(0, 0, 0, 1));
+	-webkit-mask-image: linear-gradient(to top, transparent 1%, rgba(0, 0, 0, 1));
 }
 
 
