attempt mobile device fix 2

--- a/style.css
+++ b/style.css
@@ -348,9 +348,11 @@ body {
 #lol {
 	position: absolute;
 	width: 50%;
-	min-width: 375px;
 	max-width: 500px;
-}
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+  }
 
 #stars {
 	width: 1px;
