--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ body {
 	-webkit-text-stroke-width: 2px;
 	color: #d1ccb5;
 	transform: translate(-50%, -50%);
+	white-space: nowrap;
 }
 
 .logo {
